# mre

./: CLAUDE.md  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: release.yml
docs/: RELEASES.md
src/: main.js  styles.css
src-tauri/: Cargo.toml  Info.plist  nsis-hooks.nsh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  git.rs  git_commands.rs  github_auth.rs  lib.rs  main.rs  markdown.rs  pdf_export.rs  recent.rs  state.rs  terminal.rs  tts.rs  typst_convert.rs  watcher.rs
