[package]
name = "mre"
version = "0.1.7"
description = "Markdown Read & Edit — a lightweight GitHub-style markdown editor"
authors = ["derrick"]
edition = "2021"

[lib]
name = "mre_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
comrak = { version = "0.36", default-features = false, features = ["syntect", "shortcodes"] }
notify = "8"
regex = "1"
git2 = { version = "0.19", features = ["vendored-openssl"] }
similar = "2"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
base64 = "0.22"
typst-as-lib = { version = "0.15", features = ["typst-kit-fonts", "typst-kit-embed-fonts"] }
typst-pdf = "0.14"
typst = "0.14"

[profile.release]
lto = true
opt-level = "s"
strip = true
codegen-units = 1
